--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "gRPC example with nodejs and typescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "build": "npx tsc --skipLibCheck",
+    "start": "npx tsc --skipLibCheck && node ./dist/server.js"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yogeshkathayat/grpc-node-typescript.git"
